--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://picgle.com">
+    <meta property="og:url" content="https://www.picgle.org">
     <meta property="og:title" content="Picgle - Advanced Image Processing Tool">
     <meta property="og:description" content="Free online image decomposition and blending tool with advanced features">
-    <meta property="og:image" content="https://picgle.com/og-image.jpg">
+    <meta property="og:image" content="https://www.picgle.org/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://picgle.com">
+    <meta property="twitter:url" content="https://www.picgle.org">
     <meta property="twitter:title" content="Picgle - Advanced Image Processing Tool">
     <meta property="twitter:description" content="Free online image decomposition and blending tool with advanced features">
-    <meta property="twitter:image" content="https://picgle.com/og-image.jpg">
+    <meta property="twitter:image" content="https://www.picgle.org/og-image.jpg">
 
-    <link rel="canonical" href="https://picgle.com">
+    <link rel="canonical" href="https://www.picgle.org">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -631,13 +631,13 @@
                             <svg class="w-5 h-5 mr-3 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <span class="text-gray-600">support@picgle.com</span>
+                            <span class="text-gray-600">support@www.picgle.org</span>
                         </div>
                         <div class="flex items-center">
                             <svg class="w-5 h-5 mr-3 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"></path>
                             </svg>
-                            <span class="text-gray-600">www.picgle.com</span>
+                            <span class="text-gray-600">www.www.picgle.org</span>
                         </div>
                         <div class="flex items-center">
                             <svg class="w-5 h-5 mr-3 text-primary" fill="currentColor" viewBox="0 0 24 24">
