--- a/404.html
+++ b/404.html
@@ -115,17 +115,28 @@
                 </button>
             </div>
 
-            <!-- Helpful Links -->
+            <!-- What can you do with Picgle -->
             <div class="mt-12 pt-8 border-t border-gray-200">
-                <p class="text-gray-600 mb-4">Here are some helpful links:</p>
-                <div class="flex flex-wrap justify-center gap-4 text-sm">
-                    <a href="/#decomposeContent" class="text-primary hover:text-primary-dark">Decompose Images</a>
-                    <span class="text-gray-400">•</span>
-                    <a href="/#blendContent" class="text-primary hover:text-primary-dark">Blend Images</a>
-                    <span class="text-gray-400">•</span>
-                    <a href="/#helpContent" class="text-primary hover:text-primary-dark">How to Use</a>
-                    <span class="text-gray-400">•</span>
-                    <a href="/#aboutContent" class="text-primary hover:text-primary-dark">About</a>
+                <p class="text-gray-600 mb-4">While you're here, learn what Picgle can do:</p>
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-lg mx-auto text-left">
+                    <div class="flex items-start space-x-3">
+                        <svg class="w-5 h-5 text-primary mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                        </svg>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">Decompose</h3>
+                            <p class="text-sm text-gray-600">Break images into artistic layers</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <svg class="w-5 h-5 text-primary mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                        </svg>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">Blend</h3>
+                            <p class="text-sm text-gray-600">Combine images with blend modes</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -136,8 +147,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="text-center">
                 <p class="text-gray-600 text-sm">
-                    &copy; 2024 Picgle. All rights reserved. • 
-                    <a href="mailto:support@picgle.com" class="text-primary hover:text-primary-dark">Contact Support</a>
+                    &copy; 2025 Picgle. All rights reserved. • 
+                    <a href="mailto:support@picgle.org" class="text-primary hover:text-primary-dark">Contact Support</a>
                 </p>
             </div>
         </div>
