--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <meta property="twitter:image" content="https://www.picgle.org/og-image.jpg">
 
     <link rel="canonical" href="https://www.picgle.org">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-53GZ7F6T');</script>
+    <!-- End Google Tag Manager -->
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -75,7 +83,7 @@
                         How to Use
                     </button>
                     <button onclick="showTab('about')" id="aboutTab" class="text-gray-700 hover:text-primary font-medium transition-colors duration-200">
-                        About
+                        关于
                     </button>
                 </nav>
             </div>
@@ -698,4 +706,10 @@
     <script src="decompose.js"></script>
     <script src="blend.js"></script>
 </body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53GZ7F6T"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 </html>
