--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <meta property="twitter:image" content="https://www.picgle.org/og-image.jpg">
 
     <link rel="canonical" href="https://www.picgle.org">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZWJ5FC5T7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7ZWJ5FC5T7');
+    </script>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
